--- a/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp.Android/CommunicationCallingXamarinSampleApp.Android.csproj
+++ b/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp.Android/CommunicationCallingXamarinSampleApp.Android.csproj
@@ -212,7 +212,9 @@
     <AndroidAarLibrary Include="aar\azure-communication-calling-2.2.0.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    
+    <AndroidAarLibrary Include="aar\dualscreen-layout-1.0.0-alpha01.aar">
+      <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
+    </AndroidAarLibrary>
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
