--- a/XamarinAndroidBindings/CommunicationUILibrary/CommunicationUILibrary/CommunicationUILibrary.csproj
+++ b/XamarinAndroidBindings/CommunicationUILibrary/CommunicationUILibrary/CommunicationUILibrary.csproj
@@ -63,7 +63,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\azure-communication-ui-calling-1.0.0.aar" />
+    <LibraryProjectZip Include="Jars\azure-communication-ui-calling-1.3.1-alpha.1.aar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
