android update versions

--- a/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp.Android/CommunicationCallingXamarinSampleApp.Android.csproj
+++ b/CommunicationCallingXamarinSampleApp/CommunicationCallingXamarinSampleApp.Android/CommunicationCallingXamarinSampleApp.Android.csproj
@@ -188,28 +188,28 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidAarLibrary Include="aar\azure-core-logging-1.0.0-beta.9.aar">
+    <AndroidAarLibrary Include="aar\azure-core-logging-1.0.0-beta.12.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    <AndroidAarLibrary Include="aar\fluentui_drawer-0.0.20.aar">
+    <AndroidAarLibrary Include="aar\fluentui_drawer-0.0.21.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    <AndroidAarLibrary Include="aar\fluentui_listitem-0.0.20.aar">
+    <AndroidAarLibrary Include="aar\fluentui_listitem-0.0.21.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    <AndroidAarLibrary Include="aar\fluentui_core-0.0.20.aar">
+    <AndroidAarLibrary Include="aar\fluentui_core-0.0.21.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    <AndroidAarLibrary Include="aar\fluentui_others-0.0.20.aar">
+    <AndroidAarLibrary Include="aar\fluentui_others-0.0.21.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    <AndroidAarLibrary Include="aar\fluentui_transients-0.0.20.aar">
+    <AndroidAarLibrary Include="aar\fluentui_transients-0.0.21.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    <AndroidAarLibrary Include="aar\fluentui_persona-0.0.20.aar">
+    <AndroidAarLibrary Include="aar\fluentui_persona-0.0.21.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
-    <AndroidAarLibrary Include="aar\azure-communication-calling-2.2.0.aar">
+    <AndroidAarLibrary Include="aar\azure-communication-calling-2.6.0.beta-1.aar">
       <AndroidSkipResourceProcessing></AndroidSkipResourceProcessing>
     </AndroidAarLibrary>
     <AndroidAarLibrary Include="aar\dualscreen-layout-1.0.0-alpha01.aar">
