--- a/XamariniOSBindings/CommunicationUIProxy.Binding/CommunicationUIProxy.Binding/CommunicationUIProxy.Binding.csproj
+++ b/XamariniOSBindings/CommunicationUIProxy.Binding/CommunicationUIProxy.Binding/CommunicationUIProxy.Binding.csproj
@@ -66,6 +66,10 @@
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
     </NativeReference>
+    <NativeReference Include="..\..\ProxyLibs\CommunicationUI-Proxy\Framework\Debug-universal\AzureCore.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>False</SmartLink>
+    </NativeReference>
     <NativeReference Include="..\..\ProxyLibs\CommunicationUI-Proxy\Framework\Debug-universal\CommunicationUI_Proxy.framework">
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
