--- a/XamariniOSBindings/ProxyLibs/CommunicationUI-Proxy/Podfile
+++ b/XamariniOSBindings/ProxyLibs/CommunicationUI-Proxy/Podfile
@@ -1,15 +1,11 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
-source 'git@github.com:iaulakh/calling_ui_library_private_drop.git'
-source 'git@github.com:iaulakh/calling_native_ios_private_drop.git'
-source 'https://github.com/CocoaPods/Specs.git'
-
 target 'CommunicationUI-Proxy' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for CommunicationUI-Proxy
-  pod 'AzureCommunicationUICalling', '1.5.0-alpha.8'
+  pod 'AzureCommunicationUICalling', '1.4.0'
 
 end
